--- a/templates/incl/footer.html.twig
+++ b/templates/incl/footer.html.twig
@@ -1,3 +1,13 @@
 <footer>
-FOOTER
+<div class="footer-inside">
+
+    <p>
+        © Anna Nilsson.
+    </p>
+
+    <a href="https://github.com/Aeen/anns21-mvc" title="Annas Github" target="_blank">
+        <img src="{{ asset('img/github.png') }}" alt="Annas Github">
+    </a>
+
+</div>
 </footer>
