--- a/templates/incl/header.html.twig
+++ b/templates/incl/header.html.twig
@@ -2,7 +2,7 @@
 <div class="header-inside">
 
 <div class="logo">
-LOGO
+<img src="{{ asset('img/nilsson-logo.png') }}" alt="Annas logotype" width="200px">
 </div>
 
 <nav>
@@ -10,12 +10,13 @@ LOGO
         <ul>
             <li>
                 <a href="/">Home</a>
+                <a href="/about">About</a>
+                <a href="/report">Report</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="break"></div> <!-- break -->
 
 </div>
 </header>
