--- a/templates/incl/headerindex.html.twig
+++ b/templates/incl/headerindex.html.twig
@@ -1,8 +1,8 @@
-<header>
+<header class="index-header">
 <div class="header-inside">
 
 <div class="logo">
-LOGO
+<img src="{{ asset('img/nilsson-logo.png') }}" alt="Annas logotype" width="200px">
 </div>
 
 <nav>
@@ -10,18 +10,34 @@ LOGO
         <ul>
             <li>
                 <a href="/">Home</a>
+                <a href="/about">About</a>
+                <a href="/report">Report</a>
             </li>
         </ul>
     </div>
 </nav>
 
+</div>
+
 <div class="break"></div> <!-- break -->
 
-    <div class="wrapper">
-        <div class="typing">
-            Välkommen till min sida!
-        </div>
-    </div>
+<h3 class="header-text">
+    Mitt namn är
+</h3>
 
+<div class="break"></div> <!-- break -->
+
+<h5 class="header-name">
+    Anna Nilsson
+</h5>
+
+<div class="break"></div> <!-- break -->
+
+<div class="wrapper">
+    <h2 class="typing">
+        Välkommen till min sida!
+    </h2>
 </div>
+
+
 </header>
