--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -4,8 +4,37 @@
 
 {% block body %}
 
-    <div>
-        INDEX
+    <div class="main-img">
+        <img src="{{ asset('img/barn.jpg') }}" alt="Annas barn">
+    </div>
+    <div class="main-text">
+        <h1>Om mig</h1>
+
+        <p>
+        Mitt namn är Anna, och jag bor i Löddeköpinge (skåne) tillsammans med min familj 
+        som består av min sambo och tre barn som i år blir 8 år, 6 år och 3 år. Jag har varit 
+        hemmaförälder fram tills i höst, och har studerat på kvällar och helger för att 
+        kunna va hemma med barnen längre.
+        </p>
+
+        <p>
+        Jag tog en högskoleexamen i Informatik 2020, och blev nu i januari klar med min kandidatuppsats.
+        Den här terminen ägnar jag åt detta kurspaket och umgås så mycket jag bara kan med mina barn.
+        </p>
+
+        <p>
+        Jag tycker om att lära mig saker, att renovera, baka, leka med barnen och att umgås med vänner och familj. 
+        Det är däremot en svår balansgång att hinna med allt, och att njuta av det när det alltid är något mer som ska göras.
+        </p>
+
+        <p>
+        Här är en sommarbild på mina barn från sommaren 2021.
+        </p>
+
+        <p>
+        Vi hörs!
+        </p>
+
     </div>
 
 {% endblock %}
