--- a/templates/pages/report.html.twig
+++ b/templates/pages/report.html.twig
@@ -1,11 +1,95 @@
-{% extends 'pages.html.twig' %}
+{% extends 'report.html.twig' %}
 
 {% block title %}Report{% endblock %}
 
 {% block body %}
 
-    <div>
-        RAPPORTSIDA
+    <div class="report-h1">
+        <h1>Reports</h1>
+    </div>
+
+    <div class="report-text-l">
+
+        <h2>
+        Kmom01
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
+    </div>
+
+    <div class="report-text-r">
+
+        <h2>
+        Kmom02
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
+    </div>
+
+        <div class="report-text-l">
+
+        <h2>
+        Kmom03
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
+    </div>
+
+    <div class="report-text-r">
+
+        <h2>
+        Kmom04
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
+    </div>
+
+        <div class="report-text-l">
+
+        <h2>
+        Kmom05
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
+    </div>
+
+    <div class="report-text-r">
+
+        <h2>
+        Kmom06
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
+    </div>
+
+        <div class="report-text-l">
+
+        <h2>
+        Kmom07/10
+        </h2>
+
+        <p>
+        Skriv din text här...
+        </p>
+
     </div>
 
 {% endblock %}
