--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,10 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
         
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@900&display=swap" rel="stylesheet">
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('style') }}
@@ -19,10 +23,10 @@
 
         {{ include('./incl/headerindex.html.twig') }}
 
-        <div class="main-container">
+        <div class="main-base-container">
         {% block body %}{% endblock %}
         </div>
-        
+
         {{ include('./incl/footer.html.twig') }}
 
     </body>
