--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -23,7 +23,7 @@
 
         {{ include('./incl/header.html.twig') }}
 
-        <div class="main-container">
+        <div class="main-container-report">
         {% block body %}{% endblock %}
         </div>
 
