--- a/templates/incl/header.html.twig
+++ b/templates/incl/header.html.twig
@@ -2,11 +2,10 @@
 <div class="header-inside">
 
 <div class="logo">
-<img src="{{ asset('img/nilsson-logo.png') }}" alt="Annas logotype" width="200px">
+<img src="img/nilsson-logo.png" alt="Annas logotype" width="200px">
 </div>
 
 <nav>
-    <div>
         <ul>
             <li>
                 <a href="/">Home</a>
@@ -14,7 +13,6 @@
                 <a href="/report">Report</a>
             </li>
         </ul>
-    </div>
 </nav>
 
 
