--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -49,12 +49,12 @@
     </div>
 
     <div class="about-img">
-        <img src="{{ asset('img/pexels.jpg') }}" alt="Representativ bild mvc">
+        <img src="img/pexels.jpg" alt="Representativ bild mvc">
     </div>
 
     <div class="about-git">
         <a href="https://github.com/dbwebb-se/mvc" title="Mvc Github" target="_blank">
-            <img src="{{ asset('img/octogit.png') }}" alt="Github symbol">
+            <img src="img/octogit.png" alt="Github symbol">
         </a>
     </div>
 
