--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
     justify-items: center;
     margin: 0;
     padding: 0;
+    overflow-wrap: break-word;
 }
 
 header {
@@ -261,6 +262,7 @@ nav  ul {
     justify-content: center;
     list-style-type: none;
     margin: 0;
+    padding: 0;
   }
   
 nav  li a:hover {
@@ -305,6 +307,105 @@ nav li a::after {
   }
   
 nav  li a:hover::after,
-nav  li a:focus::after{
+nav  li a:focus::after {
     transform: scale(1);
-  }
+}
+
+@media (max-width: 750px) {
+
+
+    .header-inside {
+        display: grid;
+        width: 90vw;
+        grid-template-columns: 50% 50%;
+        grid-template-areas:
+        "p p"
+        "a a";
+    }
+
+    .logo {
+        grid-area: p;
+        justify-self: center;
+        margin: 1vh 0;
+    }
+    
+    nav {
+        grid-area: a;
+        justify-self: center;
+        margin: 1vh 0;
+    }
+
+.main-container {
+    grid-template-areas:
+    "about-h1 about-h1"
+    "about-text about-text"
+    "about-img about-img"
+    "about-git about-git";
+}
+
+.main-container h1 {
+    text-align: center;
+}
+
+
+.report-text-l {
+    grid-column: 1 / 2;
+}
+
+.report-text-r {
+    grid-column: 1 / 2;
+}
+
+.main-base-container {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+}
+
+.main-container-report {
+    text-align: center;
+}
+
+}
+
+@media (max-width: 500px) {
+
+    nav ul {
+        display: grid;
+    }
+
+    .logo {
+        width: 75vw;
+    }
+
+    .footer-inside {
+        display: grid;
+        width: 90vw;
+        grid-template-columns: 50% 50%;
+        grid-template-areas:
+        "p p"
+        "a a";
+    }
+
+    .footer-inside p {
+        grid-area: p;
+        justify-self: center;
+        margin: 1vh 0;
+    }
+    
+    .footer-inside a {
+        grid-area: a;
+        justify-self: center;
+        margin: 1vh 0;
+    }
+
+    .main-container h1 {
+        font-size: 1.5em;
+    }
+
+    .main-container h2 {
+        font-size: 1.2em;
+    }
+    
+    
+}
