--- a/templates/pages/report.html.twig
+++ b/templates/pages/report.html.twig
@@ -10,85 +10,43 @@
 
     <div class="report-text-l">
 
-        <h2>
-        Kmom01
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+        {{ include('report/kmom01.markdown.twig')|markdown_to_html }}
 
     </div>
 
     <div class="report-text-r">
 
-        <h2>
-        Kmom02
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+        {{ include('report/kmom02.markdown.twig')|markdown_to_html }}
 
     </div>
 
-        <div class="report-text-l">
+    <div class="report-text-l">
 
-        <h2>
-        Kmom03
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+        {{ include('report/kmom03.markdown.twig')|markdown_to_html }}  
 
     </div>
 
     <div class="report-text-r">
 
-        <h2>
-        Kmom04
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+        {{ include('report/kmom04.markdown.twig')|markdown_to_html }}
 
     </div>
 
         <div class="report-text-l">
 
-        <h2>
-        Kmom05
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+         {{ include('report/kmom05.markdown.twig')|markdown_to_html }}
 
     </div>
 
     <div class="report-text-r">
 
-        <h2>
-        Kmom06
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+        {{ include('report/kmom06.markdown.twig')|markdown_to_html }}
 
     </div>
 
         <div class="report-text-l">
 
-        <h2>
-        Kmom07/10
-        </h2>
-
-        <p>
-        Skriv din text här...
-        </p>
+        {{ include('report/kmom07-10.markdown.twig')|markdown_to_html }}
 
     </div>
 
