--- a/templates/incl/header.html.twig
+++ b/templates/incl/header.html.twig
@@ -8,9 +8,9 @@
 <nav>
         <ul>
             <li>
-                <a href="/">Home</a>
-                <a href="/about">About</a>
-                <a href="/report">Report</a>
+                <a href="{{ url('home') }}">Home</a>
+                <a href="{{ url('about') }}">About</a>
+                <a href="{{ url('report') }}">Report</a>
             </li>
         </ul>
 </nav>
