--- a/templates/report/kmom01.markdown.twig
+++ b/templates/report/kmom01.markdown.twig
@@ -1,20 +1,28 @@
 ## Kmom01 ##
 
 ### Berätta kort om dina förkunskaper och tidigare erfarenheter kring objektorientering. ###
-Skriv ditt svar här...
+
+Jag har lite koll på objektorientering genom någon kurs jag läst i Java. Men jag skulle inte vilja påstå att det är något jag "kan". Jag kan däremot tänka mig att allt eftersom kursen fortgår så kommer jag uppleva några juste-upplevelser då jag säkert kommer komma ihåg en del medan jag praktiserar det.
 
 
 ### Berätta kort om PHPs modell för klasser och objekt. Vilka är de grunder man behöver veta/förstå för att kunna komma igång och skapa sina första klasser? ###
-Skriv ditt svar här...
+
+För att kunna förstå hur man kommer igång med att skapa sina första klasser i PHP behöver man förstå vad en klass och ett objekt är. Ett objekt är programdel som i sin enklaste form består av funktioner och variabler. Man kan dessutom lagra ett objekt i en variabel, vilket gör att man lätt kommer åt både funktioner och variabler från den variabel man lagrade objektet i. 
+
+För att skilja på funktioner som är fristående och de som finns i ett objekt så kallar man funktioner i ett objektsammanhang för metoder. Metoderna används ofta för att påverka eller hämta obejktets variabler, och ofta döps de till vad metoden gör. Exempelvis "getColor" för att hämta objektets färg. Variabler kallas däremot ofta för attribut eller egenskaper i objektsammanhang för att skilja dem från de fristående. En klass är som en mall där man skapar objekt. Det är alltså i klassen som metoder och attribut defineras för objektet.
 
 
 ### Reflektera kort över den kodbas, koden, strukturen som användes till uppgiften me/report, hur uppfattar du den? ###
-Skriv ditt svar här...
+
+Jag upplever kodbasen som förståelig och väldigt lik den struktur vi haft i de tidigare kurserna från detta kurspaket. Jag har testat att installera lite olika paket för att se hur det fungerar. Exempelvis för att kunna använda markdown i stället för att skriva i html-koden. Jag har även försökt bygga upp en egen stuktur där jag skiljer på templates som basstruktur, header, footer, enskilda sidor mm. 
 
 
 ### Med tanke på artikeln “PHP The Right Way”, vilka delar i den finner du extra intressanta och värdefulla? Är det några särskilda områden som du känner att du vill veta mer om? Lyft fram några delar av artikeln som du känner mer värdefulla. ###
-Skriv ditt svar här...
+
+Jag har inte läst alla delar i artikeln, men tycker att den inledningsvis är väldigt överskådlig och "enkel" på ett bra sätt. För min egen del så använder jag mest den här typen av resurser som ett slags uppslagsverk, och läser därför de delar som är relevanta för stunden. Jag har därför bara än så länge skummat igenom de olika delarna men fastnade lite mer vid "Coding practices", "Templating" och "Error och Exceptions".
+
 
 
 ### Vilken är din TIL för detta kmom? ###
-Skriv ditt svar här...
+
+Det jag speciellt skulle vilja trycka på att jag lärt mig under detta moment är att jag inte behöver XAMPP för att köra Symfony utan att det går direkt lokalt med terminalen via PHP.
