--- a/templates/incl/headerindex.html.twig
+++ b/templates/incl/headerindex.html.twig
@@ -5,15 +5,7 @@
 <img src="img/nilsson-logo.png" alt="Annas logotype" width="200px">
 </div>
 
-<nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-                <a href="/about">About</a>
-                <a href="/report">Report</a>
-            </li>
-        </ul>
-</nav>
+{{ include('./incl/navbar.html.twig') }}
 
 </div>
 
