--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'pages.html.twig' %}
 
-{% block title %}Report{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block body %}
 
