--- a/templates/pages/uppgift.html.twig
+++ b/templates/pages/uppgift.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
 
+<h1> Uppgifter </h1>
 
 <nav class="navbar">
     <ul>
@@ -11,8 +12,8 @@
     </ul>
 </nav>
 
-        <p>
-        Skriv text här..
-        </p>
+<div class="practice-img">
+    <img src="{{ asset("img/pexels-practice.jpg") }}" alt="Dekorativ bild"
+</div>
 
 {% endblock %}
