--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,6 +220,13 @@ ul {
     margin: 1vh;
 }
 
+.practice-img img {
+    width: 100%;
+    height: 25vh;
+    object-fit: cover;
+    margin-bottom: 1vh;
+}
+
 h1, h2, h3, h4, h5 {
     font-family: 'Open Sans', sans-serif;
     margin-top: 0;
