--- a/templates/form/login.html.twig
+++ b/templates/form/login.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+<h1> Login </h1>
+
 <nav class="navbar">
     <ul>
         <li><a href="{{ path("form-login") }}">Login</a></li> | 
