Kmom02 övningar klara

--- a/templates/pages/ovning.html.twig
+++ b/templates/pages/ovning.html.twig
@@ -8,7 +8,8 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="{{ path("form-login") }}">Form</a></li>
+        <li><a href="{{ path("form-login") }}">Form</a></li> | 
+        <li><a href="{{ path("dice-home") }}">Dice</a></li>
     </ul>
 </nav>
 
