--- a/templates/dice/hand.html.twig
+++ b/templates/dice/hand.html.twig
@@ -7,13 +7,9 @@
 
 <h1>Dice hand</h1>
 
-<nav class="navbar">
-    <ul>
-        <li><a href="{{ path("dice-home") }}">Home</a></li> | 
-        <li><a href="{{ path("dice-hand-home") }}">Hand</a></li> | 
-        <li><a href="{{ path("dice-graphic-home") }}">Graphic</a></li>
-    </ul>
-</nav>
+{{ include('./dice/navbar.html.twig') }}
+
+
 
 <form method="post">
     <fieldset>
