--- a/public/css/style.css
+++ b/public/css/style.css
@@ -376,7 +376,10 @@ nav  li a:focus::after {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+/*     display: grid;
+    grid-template-columns: repeat(13, auto);
+    justify-content: center; */
 }
 
 .cards {
@@ -387,7 +390,7 @@ nav  li a:focus::after {
     width: 50px;
     height: 90px;
     padding: 5px;
-    margin: 2px;
+    margin: 0.5vw;
 }
 
 .left-card{
@@ -402,7 +405,6 @@ nav  li a:focus::after {
 .♥, .♦ {
     color: red;
 }
-
 
 @media (max-width: 900px) {
 
