--- a/templates/form/search.html.twig
+++ b/templates/form/search.html.twig
@@ -6,13 +6,8 @@
 
 <h1> Search </h1>
 
-<nav class="navbar">
-    <ul>
-        <li><a href="{{ path("form-login") }}">Login</a></li> | 
-        <li><a href="{{ path("form-search") }}">Search</a></li> | 
-        <li><a href="{{ path("form-session") }}">Session</a></li>
-    </ul>
-</nav>
+{{ include('./form/navbar.html.twig') }}
+
 
 <form>
     <p>
