--- a/templates/card/navbar.html.twig
+++ b/templates/card/navbar.html.twig
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="{{ path("card-deck") }}">Card</a></li> | 
         <li><a href="{{ path("card-shuffle") }}">Shuffle</a></li> | 
-        <li><a href="{{ path("card-draw") }}">Draw</a></li>
+        <li><a href="{{ path("card-draw") }}">Draw</a></li> | 
+        <li><a href="{{ path("card-draw-deal") }}">Deal</a></li>
     </ul>
 </nav>
