--- a/templates/card/navbar.html.twig
+++ b/templates/card/navbar.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <ul>
         <li><a href="{{ path("card-deck") }}">Card</a></li> | 
+        <li><a href="{{ path("card-deck2") }}">Card2</a></li> | 
         <li><a href="{{ path("card-shuffle") }}">Shuffle</a></li> | 
         <li><a href="{{ path("card-draw") }}">Draw</a></li> | 
         <li><a href="{{ path("card-draw-deal") }}">Deal</a></li>
