--- a/templates/card/navbar.html.twig
+++ b/templates/card/navbar.html.twig
@@ -5,6 +5,7 @@
         <li><a href="{{ path("card-deck2") }}">CardJoker</a></li> | 
         <li><a href="{{ path("card-shuffle") }}">Shuffle</a></li> | 
         <li><a href="{{ path("card-draw") }}">Draw</a></li> | 
-        <li><a href="{{ path("card-draw-deal") }}">Deal</a></li>
+        <li><a href="{{ path("card-draw-deal") }}">Deal</a></li> | 
+        <li><a href="{{ path("game-card") }}">GameCard</a></li>
     </ul>
 </nav>
