--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="main-img">
-        <img src="img/barn.jpg" alt="Annas barn">
+        <img src="{{ asset("img/barn.jpg") }}" alt="Annas barn">
     </div>
     <div class="main-text">
         <h1>Om mig</h1>
