--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,13 @@ ul {
     object-position: 0 0;
 }
 
+.game-img img {
+    height: 25%;
+    object-fit: cover;
+    object-position: 0 0;
+    margin-bottom: 1vh;
+}
+
 .about-git {
     margin-top: 2vh;
     justify-self: center;
@@ -440,6 +447,14 @@ nav  li a:focus::after {
 .cards .Joker {
     font-size: 0.8em;
     font-weight: bold;
+}
+
+.klasser h4 {
+    margin-top: 1vh;
+}
+
+.klasser p {
+    margin: 0;
 }
 
 @media (max-width: 900px) {
