--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -49,7 +49,7 @@
     </div>
 
     <div class="about-img">
-        <img src="img/pexels.jpg" alt="Representativ bild mvc">
+        <img src="{{ asset("img/pexels.jpg") }}" alt="Representativ bild mvc">
     </div>
 
     <div class="about-git">
