--- a/public/css/style.css
+++ b/public/css/style.css
@@ -414,6 +414,32 @@ nav  li a:focus::after {
     justify-content: center;
 }
 
+
+.button-play a {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    text-decoration: none;
+    padding: 0.4vw;
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: 5vh 1vh;
+    text-align: center;
+}
+
+.card-container-play {
+    background-color: green;
+    min-height: 50vh;
+    border-radius: 2px;
+    margin-top: 2vh;
+}
+
+.card-container-play h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.75em;
+    margin: 2vh 0;
+    color: white;
+}
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -429,6 +455,7 @@ nav  li a:focus::after {
     height: 90px;
     padding: 5px;
     margin: 0.5vw;
+    background-color: white;
 }
 
 .left-card{
