--- a/public/css/style.css
+++ b/public/css/style.css
@@ -415,9 +415,10 @@ nav  li a:focus::after {
 }
 
 
-.button-play a {
+.button-play input {
     font-family: 'Open Sans', sans-serif;
     color: white;
+    background-color: green;
     text-decoration: none;
     padding: 0.4vw;
     border: 1px solid white;
@@ -436,7 +437,14 @@ nav  li a:focus::after {
 .card-container-play h2 {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.75em;
-    margin: 2vh 0;
+    margin-top: 2vh;
+    color: white;
+}
+
+.card-container-play h4 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    margin-bottom: 1vh;
     color: white;
 }
 
