--- a/templates/game/play.html.twig
+++ b/templates/game/play.html.twig
@@ -10,6 +10,10 @@
 
 <div class="card-container-play">
 
+    <div class="flash-messages-game">
+        {{ include('block/flash-message.html.twig') }}     
+    </div>
+    
     <div class="card-container">
         <h2>Dealers hand</h2>
     </div>
