--- a/templates/game/home.html.twig
+++ b/templates/game/home.html.twig
@@ -10,7 +10,7 @@
 
 <h2>Spelregler</h2>
 <p>
-Spelet går ut på att komma så nära talet 21 som möjligt utan att bli "tjock", det vill säga få över 21. Man måste dessutom ha bättre kort än dealern. Varje spelare spelar MOT dealern, inte mot varandra. Alla klädda kort är värda 10, ess är 11 eller 1, övriga kort är värda dess siffra. Efter att spelaren har fått 2 kort och dealern 1 kort, summeras händerna. Om spelarens 2 första kort är ett ess och ett klätt kort/en 10:a kallas det Black Jack och ger vinst. Från och med nu, delas 1 kort ut till varje spelare och dealer, om spelare/dealer inte väljer att stanna. Om både spelare och dealer har 17, 18 eller 19 så vinner dealern, har både spelare och dealer 20 eller 21 så blir det lika, dvs ingen vinst till spelaren men han blir heller inte av med sin insats.
+Spelet går ut på att komma så nära talet 21 som möjligt utan att bli "tjock", det vill säga få över 21. Man måste dessutom ha bättre kort än dealern. Spelaren spelar MOT dealern. Alla klädda kort är värda 10, ess är 11 (för enkelhetens skull), övriga kort är värda dess siffra. Spelet inleds med att spelaren och dealern får 2 kort var, sen summeras händerna. Om spelarens 2 första kort är ett ess och ett klätt kort/en 10:a kallas det Black Jack och ger vinst. Från och med nu, delas 1 kort ut till varje spelare och dealer, om spelare/dealer inte väljer att stanna. Om både spelare och dealer har 17, 18 eller 19 så vinner dealern, har både spelare och dealer 20 eller 21 så blir det lika, dvs ingen vinst till spelaren men han blir heller inte av med sin insats (Om det spelas om pengar).
 </p>
 
 <a href="{{ path("game-playing") }}">Börja spela</a>
